RBEA-605: Fixed extra padding applied to spacer block generated from theme CSS

--- a/src/blocks/spacer/styles/styles.editor.scss
+++ b/src/blocks/spacer/styles/styles.editor.scss
@@ -1,1 +1,4 @@
 //editor styles will go here
+.responsive-block-editor-addons-spacer {
+	padding: 0 !important;
+}
